# machine-learning-for-data-idc

./: .gitignore  README.md  pyproject.toml
hw1/: hw1.ipynb  hw1.py
hw2/: .gitignore  hw2.ipynb  hw2.py  pyproject.toml
hw3/: hw3.ipynb  hw3.py
hw4/: hw4.ipynb  hw4.py
hw5/: Ex5 PAC-Learnable.ipynb
